# Project_W

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  api_metadata.py  config.py  dependencies.py  main.py  production_config.py
backend/app/application/: __init__.py
backend/app/application/dtos/: __init__.py  planning_dtos.py  risk_dtos.py  user_dtos.py
backend/app/application/use_cases/: assign_role.py  calculate_risk.py  deactivate_user.py  get_risk_factors.py  get_user_profile.py  list_users.py  login_user.py  refresh_token.py  register_user.py  remove_role.py  update_profile.py
backend/app/core/models/: __init__.py  audit.py  role.py  user.py
backend/app/core/repositories/: __init__.py  user_repository.py
backend/app/core/routers/: __init__.py  auth.py  users.py
backend/app/core/schemas/: __init__.py  auth.py  user.py
backend/app/core/services/: __init__.py  auth_service.py  user_service.py
backend/app/domain/: __init__.py  exceptions.py
backend/app/domain/entities/: __init__.py  audit_log.py  profile.py  role.py  user.py
backend/app/domain/ports/: risk_model_port.py
backend/app/domain/repositories/: __init__.py  audit_log_repository.py  enrollment_repository.py  group_repository.py  internship_repository.py  period_repository.py  reservations_repository.py  risk_model.py  risk_repository.py  (+3 more)
backend/app/infrastructure/: __init__.py
backend/app/interfaces/: __init__.py  dependencies.py
backend/app/internships/: __init__.py
backend/app/risk/: __init__.py
backend/app/shared/: __init__.py  database.py  pagination.py  security.py
backend/scripts/: verify_risk.py
backend/tests/: conftest.py
backend/tests/core/: test_auth.py
backend/tests/e2e/: __init__.py  test_workflows.py
backend/tests/infrastructure/: test_internship_mappers.py  test_planning_mappers.py  test_reservation_mappers.py  test_risk_mappers.py
backend/tests/internships/: __init__.py  test_applications.py  test_companies.py  test_internships.py  test_positions.py
backend/tests/reservations/: __init__.py  test_reservations.py  test_resources.py
(+233 files in other folders)
